--- a/frontend.html
+++ b/frontend.html
@@ -38,12 +38,28 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://qualitest-1.workable.com/j/82437F3039'>QualiTest - Jobs: R&D Frontend Team Leader - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://qualitest-1.workable.com/j/841DD86077'>QualiTest - Jobs: R&D Frontend Developer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/kickstarter/c0716afb-21a8-467e-822d-dcf189f1c85f'>Kickstarter - Front End Engineer, Project Storytelling</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://gowago.join.com/jobs/267630-senior-front-end-developer'>Job @ GOWAGO (Z?rich): Senior Front-End Developer | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692092533-frontend-backend-developer-remote-'>Lingoda Frontend/Backend Developer (Remote) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Square/743999692323814-software-engineer-frontend-point-of-sale-invoices'>Square Software Engineer (Frontend), Point of Sale Invoices | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692275746-frontend-developer'>Prospect Infosys Inc. Frontend Developer | SmartRecruiters</a></h5> 
@@ -98,6 +114,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
+<h5><a href='https://jobs.jobvite.com/daveramsey/job/o0IDafwf'>Ramsey Solutions Careers - Senior Frontend Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>3 days ago ... Our technology teams are growing, and we're hiring a Senior Frontend Engineer. 
+If you're looking for a career with a purpose, you've come to the right place.</p>
+<hr/>
 <h5><a href='https://letsumai.join.com/jobs/272177-react-front-end-developer'>Job @ UMAI (Kuala Lumpur): React Front-End Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -133,7 +154,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692181363-senior-frontend-developer'>Bosch Group Senior Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692181363-senior-frontend-developer'>Bosch Group Senior Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -194,7 +215,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/9Gmh11A1A4/Front-End-Software-Development-Engineer-III-Seattle-WA'>Front End Software Development Engineer III (Seattle, WA) - MedBridge - Career Page</a></h5> 
+<h5><a href='http://medbridge.applytojob.com/apply/9Gmh11A1A4/Front-End-Software-Development-Engineer-III-Seattle-WA'>Front End Software Development Engineer III (Seattle, WA) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -218,7 +239,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bizongo.recruiterbox.com/jobs/fk0jsuj/'>
+<h5><a href='https://bizongo.recruiterbox.com/jobs/fk0jsuj/'>
     Senior Software Engineer - Frontend at Bizongo
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -279,7 +300,7 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999692202526-front-end-engineer-dashboard'>Square Front End Engineer, Dashboard | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999692202526-front-end-engineer-dashboard'>Square Front End Engineer, Dashboard | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -349,7 +370,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://qualitest-1.workable.com/j/AB0456B77B'>QualiTest - Jobs: R&D Frontend Developer EL - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://qualitest-1.workable.com/j/AB0456B77B'>QualiTest - Jobs: R&D Frontend Developer EL - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -357,7 +378,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tundra.join.com/jobs/265315-senior-frontend-software-engineer-angular-react'>Job @ Tundra Inc (Z?rich): Senior Frontend Softwar... | JOIN</a></h5> 
+<h5><a href='https://tundra.join.com/jobs/265315-senior-frontend-software-engineer-angular-react'>Job @ Tundra Inc (Z?rich): Senior Frontend Softwar... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -431,28 +452,6 @@ the?...</p>
 <hr/>
 <h5><a href='http://saggezza1.applytojob.com/apply/GVzfsSfegY/Frontend-Software-Engineer'>Frontend Software Engineer - Saggezza - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692179685-front-end-engineer'>Adevinta Front-end engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Barcelona, Spain</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692158604-frontend-engineer-coches-motos-net'>Adevinta Frontend Engineer Coches&amp; Motos.net | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Barcelona, Spain</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692092476-senior-frontend-engineer-milanuncios'>Adevinta Senior Frontend Engineer Milanuncios | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Barcelona, Spain</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dudamobile.recruiterbox.com/jobs/fk03mg7/'>
-    Senior Front End Developer 07/19 at Duda
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692222393-frontend-developer'>DataProphet Frontend Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
